glibc_src = files(
  'src/__random.c',
  'src/abs.c',
  'src/atof.c',
  'src/atoi.c',
  'src/bsearch.c',
  'src/ctype.c',
  'src/ctypes.c',
  'src/div.c',
  'src/fileio.c',
  'src/itoa.c',
  'src/labs.c',
  'src/ldiv.c',
  'src/malloc.c',
  'src/math/__expm1.c',
  'src/math/__finite.c',
  'src/math/__rint.c',
  'src/math/__scalb.c',
  'src/math/_fltused.c',
  'src/math/acosh.c',
  'src/math/asincos.c',
  'src/math/asinh.c',
  'src/math/atan.c',
  'src/math/atan2.c',
  'src/math/atanh.c',
  'src/math/ceil.c',
  'src/math/copysign.c',
  'src/math/cosh.c',
  'src/math/drem.c',
  'src/math/exp.c',
  'src/math/exp__E.c',
  'src/math/expm1.c',
  'src/math/fabs.c',
  'src/math/finite.c',
  'src/math/floor.c',
  'src/math/fmod.c',
  'src/math/ieee754/__copysign.c',
  'src/math/ieee754/__drem.c',
  'src/math/ieee754/__infnan.c',
  'src/math/ieee754/__isinf.c',
  'src/math/ieee754/__isnan.c',
  'src/math/ieee754/__logb.c',
  'src/math/ieee754/cabs.c',
  'src/math/ieee754/cbrt.c',
  'src/math/ieee754/frexp.c',
  'src/math/ieee754/ldexp.c',
  'src/math/ieee754/log10.c',
  'src/math/ieee754/sqrt.c',
  'src/math/infnan.c',
  'src/math/isinf.c',
  'src/math/isnan.c',
  'src/math/log.c',
  'src/math/log1p.c',
  'src/math/log__L.c',
  'src/math/logb.c',
  'src/math/modf.c',
  'src/math/pow.c',
  'src/math/rint.c',
  'src/math/scalb.c',
  'src/math/sincos.c',
  'src/math/sinh.c',
  'src/math/tan.c',
  'src/math/tanh.c',
  'src/mblen.c',
  'src/mbstowcs.c',
  'src/misc_vars.c',
  'src/qsort.c',
  'src/rand.c',
  'src/random.c',
  'src/sbrk.c',
  'src/srand.c',
  'src/stdio/conio.c',
  'src/stdio/file_io.c',
  'src/stdio/snprintf.c',
  'src/string/__memccpy.c',
  'src/string/__stpncpy.c',
  'src/string/bcmp.c',
  'src/string/bcopy.c',
  'src/string/bzero.c',
  'src/string/ffs.c',
  'src/string/index.c',
  'src/string/memccpy.c',
  'src/string/memchr.c',
  'src/string/memcmp.c',
  'src/string/memcpy.c',
  'src/string/memfrob.c',
  'src/string/memmem.c',
  'src/string/memmove.c',
  'src/string/memset.c',
  'src/string/rindex.c',
  'src/string/stpcpy.c',
  'src/string/stpncpy.c',
  'src/string/strcasecmp.c',
  'src/string/strcat.c',
  'src/string/strchr.c',
  'src/string/strcmp.c',
  'src/string/strcpy.c',
  'src/string/strcspn.c',
  'src/string/strdup.c',
  'src/string/strfry.c',
  'src/string/strlen.c',
  'src/string/strncase.c',
  'src/string/strncat.c',
  'src/string/strncmp.c',
  'src/string/strncpy.c',
  'src/string/strpbrk.c',
  'src/string/strrchr.c',
  'src/string/strsep.c',
  'src/string/strspn.c',
  'src/string/strstr.c',
  'src/string/strtok.c',
  'src/string/swab.c',
  'src/string/wordcopy.c',
  'src/strtol.c',
  'src/strtoul.c',
)

libglibc = static_library(
  'glibc',
  glibc_src,
  include_directories : openxdk_root_inc,
)
