xlibc_src = files(
  'src/math/abort.c',
  'src/math/abs.c',
  'src/math/acos.c',
  'src/math/asin.c',
  'src/math/atan.c',
  'src/math/ceil.c',
  'src/math/div.c',
  'src/math/exp.c',
  'src/math/fabs.c',
  'src/math/floor.c',
  'src/math/fmod.c',
  'src/math/ftol.c',
  'src/math/hypot.c',
  'src/math/itoa.c',
  'src/math/ldiv.c',
  'src/math/log.c',
  'src/math/ltoa.c',
  'src/math/malloc.c',
  'src/math/misc_vars.c',
  'src/math/pow.c',
  'src/math/rand.c',
  'src/math/sincos.c',
  'src/math/sqrt.c',
  'src/math/stdio/conio.c',
  'src/math/stdio/file_io.c',
  'src/math/stdio/sprintf.c',
  'src/math/string/__memccpy.c',
  'src/math/string/memcmp.c',
  'src/math/string/memcpy.c',
  'src/math/string/memset.c',
  'src/math/string/strcat.c',
  'src/math/string/strcmp.c',
  'src/math/string/strcpy.c',
  'src/math/string/strlen.c',
  'src/math/string/strncat.c',
  'src/math/string/strncmp.c',
  'src/math/tan.c',
)

libxlibc = static_library(
  'xlibc',
  xlibc_src,
  include_directories : openxdk_inc,
)
